2008-12-02  Thorsten Meyer  <thorsten.meyier@gmx.de>

        * strings/str2mat.m: Make it a simple wrapper around
        char() and move it to scripts/deprecated/str2mat.m, remove
        obsolete tests, move remaining test to src/strfns.cc (Fchar).
        * strings/Makefile.in: Remove str2mat.m.
        * deprecated/Makefile.in: Add str2mat.m.
        * strings/strvcat.m: Remove reference to str2mat.
        
2008-11-28  David Bateman  <dbateman@free.fr>

	* plot/__go_draw_axes__.m: Set two point clipping mode to be on.

2008-11-26  Francesco Potortì  <pot@gnu.org>

	* specfun/nchoosek.m: Set max_recursion_depth and use a subfunction.

2008-11-29  Thorsten Meyer  <thorsten.meyier@gmx.de>

        * miscellaneous/gzip.m: Remove @seealso reference to __xzip__,
          improve tests
          miscellaneous/bzip2.m: Remove @seealso reference to __xzip__,
          fix handling of output argument, add test
          miscellaneous/__xzip__.m: Improve error messages, fix cleanup
          of temporary directories, remove tab characters

2008-11-24  Ben Abbott <bpabbott@mac.com>

	* plot/legend.m: Correct ording of legend labels.

2008-11-24  Ben Abbott <bpabbott@mac.com>

	* plot/__go_draw_axes__.m: Correct order for rendering children.

2008-11-21  Radek Salac  <salac.r@gmail.com>

	* sparse/cgs.m, sparse/treelayout.m: New functions.
	* sparse/Makefile.in (SOURCES): Add them here.

2008-11-14  David Bateman  <dbateman@free.fr>

	* plot/__go_draw_axes__.m (do_tics_1): Support the minorick properties
	of the axis object.

2008-11-14  Ben Abbott <bpabbott@mac.com>

	* plot/gnuplot_drawnow.m: Add support of properites to gp backend.

2008-11-13  John W. Eaton  <jwe@octave.org>

	* statistics/distributions/chi2rnd.m: Fix another missing semicolon.
	From sven.mattisson@insatnet.nu.

2008-11-12  David Bateman  <dbateman@free.fr>

	* plot/__quiver__.m: Only autoscale if more than one element to
	plot. Modify callbacks for change in order of children.