@@ -1,3 +1,9 @@
+2008-12-07  Thorsten Meyer  <thorsten.meyier@gmx.de>
+
+        * strings/lower.m: Remove
+        * strings/upper.m: Remove
+        * strings/Makefile.in: Remove lower.m, upper.m
+        
 2008-12-02  Thorsten Meyer  <thorsten.meyier@gmx.de>
 
         * strings/str2mat.m: Make it a simple wrapper around
